--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "@material-ui/core": "^4.12.3",
+    "prop-types": "^15.7.2"
   }
 }
