--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ node_modules
 /pages/data_structures/linked_list/
 /pages/data_structures/queue/
 /pages/data_structures/stack/
+/pages/data_structures/array/
